# zip2rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: build-native-libraries.yml  build-rust-library.yml
examples/: auto_init_test.rs  basic_usage.rs  comprehensive_demo.rs  minimal_test.rs  simple_test.rs
src/: embedded.rs  error.rs  ffi.rs  lib.rs  types.rs  zip_entry.rs  zip_file.rs
test_files/: data.csv  document.txt
test_files/subdir/: readme.md
zip4j-abi/: build.gradle  settings.gradle
zip4j-abi/gradle/wrapper/: gradle-wrapper.properties
zip4j-abi/src/main/java/io/github/ran/zip4j_abi/: StaticLibrary.java  Zip4JC.java
